--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
 	<main>
 		<div id="banner">
 			<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
-			<img class="banner-img" src="./assets/images/slideshow/slide2.jpg" alt="Banner Print-it">
-			<img class="banner-img" src="./assets/images/slideshow/slide3.jpg" alt="Banner Print-it">
-			<img class="banner-img" src="./assets/images/slideshow/slide4.png" alt="Banner Print-it">
 			<img class="arrow arrow_left" src="./assets/images/arrow_left.png" alt="fleche gauche">
 			<img class="arrow arrow_right" src="./assets/images/arrow_right.png" alt="fleche droite">
 			<p>Impressions tous formats <span>en boutique et en ligne</span></p>
+			<div class="dots"></div>
 		</div>
 		<section id="about-us" class="container">
 			<div>
